Some cleaning up
Changed to use the model code generation for the ontology metamodel too
Moved every component using the models into viewtypes (in line with idea to interact only through specific viewtypes for the specific formats).